--- a/sample-app/index.html
+++ b/sample-app/index.html
@@ -30,7 +30,7 @@
             var myDiv = document.getElementById('myDiv');
 
             // Change the background color of the div to green
-            myDiv.style.backgroundColor = 'maroon';
+            myDiv.style.backgroundColor = 'blue';
 
             // Log to the console
             console.log('The color of the div has been changed to green.');
