--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         document.addEventListener('DOMContentLoaded', function() {
             var myDiv = document.getElementById('myDiv');
 
-            // Change the background color of the div to green
-            myDiv.style.backgroundColor = 'green';
+            // Change the background color of the div to black
+            myDiv.style.backgroundColor = 'black';
 
             // Log to the console
             console.log('The color of the div has been changed to green.');
