--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         document.addEventListener('DOMContentLoaded', function() {
             var myDiv = document.getElementById('myDiv');
 
-            // Change the background color of the div to orange
-            myDiv.style.backgroundColor = 'orange';
+            // Change the background color of the div to blue
+            myDiv.style.backgroundColor = 'blue';
 
             // Log to the console
             console.log('The color of the div has been changed to green.');
