--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
             padding: 0;
             width: 100%;
             height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         /* Make the div fill the entire page */
         #myDiv {
-            width: 100%;
-            height: 100%;
+            font-size: 40px; /* Increase the text size */
+            color: white; /* Set the text color to white */
         }
     </style>
 </head>
 <body>
     <div id="myDiv">
-        This is a div.
+        Success
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var myDiv = document.getElementById('myDiv');
 
-            // Change the background color of the div to purple
-            myDiv.style.backgroundColor = 'purple';
+            // Change the background color of the div to Green
+            myDiv.style.backgroundColor = 'Green';
 
             // Log to the console
-            console.log('The color of the div has been changed to green.');
+            console.log('The color of the div has been changed to purple.');
         });
     </script>
 </body>
