edit color to olive

--- a/index.html
+++ b/index.html
@@ -12,31 +12,36 @@
             padding: 0;
             width: 100%;
             height: 100%;
+        }
+        
+        /* Make the div fill the entire page and center its content */
+        #myDiv {
+            width: 100%;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: olive;
         }
-        /* Make the div fill the entire page */
-        #myDiv {
-            font-size: 40px; /* Increase the text size */
-            color: white; /* Set the text color to white */
+
+        /* Increase the text size and change the color to white */
+        #myDiv span {
+            font-size: 40px;
+            color: white;
         }
     </style>
 </head>
 <body>
     <div id="myDiv">
-        Success
+        <span>This is Success</span>
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var myDiv = document.getElementById('myDiv');
 
-            // Change the background color of the div to Green
-            myDiv.style.backgroundColor = 'Green';
-
             // Log to the console
-            console.log('The color of the div has been changed to purple.');
+            console.log('The color of the div has been changed to olive.');
         });
     </script>
 </body>
