--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: orange;
+            background-color: olive;
         }
 
         /* Increase the text size and change the color to white */
